@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Add HTML5 local caching as a toggleable option for manager ui
 - [#5788] Fix content not output to browser until after shutdown function
 - [#5777] Fix validation of TV names against Resource field names
 - Add ability to install and upgrade MODX from command line
